add style to page elements

--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
   <title>Drink Water</title>
 </head>
 <body>
-    <h1>Drink Water</h1>
+    <main>
+      <section id="headers">
+        <h1>Drink Water</h1>
+        <h2>Goal: 2 Liters</h2>
+      </section>
+
+      <section class="bg-cup-sect">
+        <div id="big-cup">
+          <div class="remaining">
+            <p id="liter">2L</p>
+            <p>Remaining</p>
+          </div>
+          <div class="percentage">0%</div>
+        </div>
+      </section>
+
+      <h2>How many glasses of water have you drank?</h2>
+      <section id="sm-cups-sect">
+        <div class="small-cups">250<br>ml</div>
+        <div class="small-cups">250<br>ml</div>
+        <div class="small-cups">250<br>ml</div>
+        <div class="small-cups">250<br>ml</div>
+        <div class="small-cups">250<br>ml</div>
+        <div class="small-cups">250<br>ml</div>
+        <div class="small-cups">250<br>ml</div>
+        <div class="small-cups">250<br>ml</div>
+      </section>
+    </main>
 </body>
 </html>
